@@ -37,6 +37,8 @@
 	* src/core/exmpp_jid.erl: For JIDs, accept the empty string in
 	argument but still use undefined in the #jid construction.
 
+	* src/core/exmpp_presence.erl: Add a function probe/0.
+
 2008-06-23  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* src/core/exmpp_jid.erl: Add functions to convert to and from
